Remove debug log, fix favicon

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <nz-page-header>
-  <nz-avatar nzShape="square" nzSize="large" nz-page-header-avatar nzSrc="https://ik.imagekit.io/AstralJaeger/tr:w-50,h-50,c-force/GC/favicon_yJF6dW0bcqLi.png"></nz-avatar>
+  <nz-avatar nzShape="square" nzSize="large" nz-page-header-avatar nzSrc="https://ik.imagekit.io/AstralJaeger/GC/favicon.png"></nz-avatar>
   <nz-page-header-title>
     Genshin Party Calculator
   </nz-page-header-title>
